[package]
name = "rust-shell"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A Unix-style shell implementation in Rust"
license = "MIT"
repository = "https://github.com/yourusername/rust-shell"
keywords = ["shell", "cli", "unix", "terminal"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true
